# whitenoiselinux

./: .gitignore  CMakeLists.txt  README.md  WhiteNoiseLinux.pro  WhiteNoiseLinux.supp  config.h  config.h.in  resources_WhiteNoiseLinux.qrc  wnlaboutdialog.h  wnlaboutdialog.ui  wnlmainwindow.cpp  wnlmainwindow.h  wnlmainwindow.ui  wnlmprismediaplayer2adaptor.cpp  wnlmprismediaplayer2adaptor.h  wnlmprismediaplayer2playeradaptor.cpp  wnlmprismediaplayer2playeradaptor.h  wnlmprismetadatamap.cpp  wnlmprismetadatamap.h  wnlplaybackmanager.cpp  wnlplaybackmanager.h  wnlplaylistmanager.h  wnlsound.h  wnlsoundgrabber.cpp  wnlsoundgrabber.h
forms/: wnlaboutdialog.ui  wnlattributionsdialog.ui  wnlmainwindow.ui
include/: wnlaboutdialog.h  wnlattributionsdialog.h  wnlmainwindow.h  wnlmprismediaplayer2adaptor.h  wnlmprismediaplayer2playeradaptor.h  wnlmprismetadatamap.h  wnlplaybackmanager.h  wnlplaylist.h  wnlplaylistmanager.h  wnlsound.h  wnlsoundgrabber.h
requirements/: base.txt
res/: WhiteNoiseLinux.desktop  ca.ryangwsimmons.whitenoiselinux.metainfo.xml  resources_WhiteNoiseLinux.qrc  whitenoiselinux.desktop
src/: main.cpp  wnlaboutdialog.cpp  wnlattributionsdialog.cpp  wnlmainwindow.cpp  wnlmprismediaplayer2adaptor.cpp  wnlmprismediaplayer2playeradaptor.cpp  wnlmprismetadatamap.cpp  wnlplaybackmanager.cpp  wnlplaylist.cpp  wnlplaylistmanager.cpp  wnlsound.cpp  wnlsoundgrabber.cpp
src/main/python/: WNLAboutDialog.py  WNLMainWindow.py  WNLPlaybackManager.py  WNLSound.py  WNLSoundGrabber.py  main.py
